--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dynamodb-wrapper",
-  "version": "1.4.1",
+  "name": "@flybondi/dynamodb-wrapper",
+  "version": "2.0.0",
   "description": "A DynamoDB library that extends aws-sdk with bulk read/write, events, streams, and more",
   "repository": {
     "type": "git",
@@ -47,7 +47,6 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
-    "@types/aws-sdk": "2.7.0",
     "@types/jasmine": "3.3.12",
     "@types/node": "12.0.1",
     "coveralls": "3.0.3",
@@ -58,10 +57,10 @@
     "gulp-tslint": "8.1.4",
     "gulp-typescript": "5.0.1",
     "jasmine-console-reporter": "3.1.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.5"
+    "tslint": "6.1.3",
+    "typescript": "5.4.5"
   },
   "peerDependencies": {
-    "aws-sdk": "2.x"
+    "@aws-sdk/client-dynamodb": "3.x"
   }
 }
