--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs"
-  }
+    "module": "commonjs",
+    "skipLibCheck": true,
+    "rootDir": ".",
+    "rootDirs": ["lib", "test"]
+  },
+  "exclude": ["node_modules/**/*"]
 }
